parse error fixed on index.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,7 +35,7 @@
                             </form>
                         </li>
                     {{/if}} 
-                {{#each}}         
+                {{/each}}         
             </ol>
         </div>
     </div>
